k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: java-war-demo-deployment
  namespace: java-war-demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: java-war-demo

  template:
    metadata:
      labels:
        app: java-war-demo

    spec:
      containers:
        - name: java-war-demo
          image: dauntlessjaypee/java-war-docker-demo:2.0
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
