k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: java-war-demo-service
  namespace: java-war-demo

spec:
    selector:
     app: java-war-demo

    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080

    type: NodePort
