k8s/java-war-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: java-war-ingress
  namespace: java-war-demo

spec:
  ingressClassName: nginx

  rules:
    - host: java-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-war-demo-service
                port:
                  number: 80
